python/tests/gold/authenticationwebsockettest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: AuthService\nname: authenticationwebsockettest-http-auth\nauth_service: \"authenticationwebsockettest-http-auth\"\npath_prefix: \"/extauth\"\ntimeout_ms: 10000\nallowed_request_headers:\n- Requested-Status\nallow_request_body: true\nambassador_id: authenticationwebsockettest\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: AuthenticationWebsocketTest\nprefix: /AuthenticationWebsocketTest/\nservice: htt [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: AuthService\\nname: authenticationwebsockettest-http-auth\\nauth_service: \\\"authenticationwebsockettest-http-auth\\\"\\npath_prefix: \\\"/extauth\\\"\\ntimeout_ms: 10000\\nallowed_request_headers:\\n- Requested-Status\\nallow_request_body: true\\nambassador_id: authentication [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:02Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "authenticationwebsockettest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "authenticationwebsockettest",
                    "namespace": "default",
                    "resourceVersion": "59344",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationwebsockettest",
                    "uid": "ce0d46db-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.96.60.182",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30367,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32100,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "authenticationwebsockettest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"authenticationwebsockettest\",\"scope\":\"AmbassadorTest\",\"service\":\"authenticationwebsockettest-admin\"},\"name\":\"authenticationwebsockettest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"authenticationwebsockettest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"servi [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:02Z",
                    "labels": {
                        "kat-ambassador-id": "authenticationwebsockettest",
                        "scope": "AmbassadorTest",
                        "service": "authenticationwebsockettest-admin"
                    },
                    "name": "authenticationwebsockettest-admin",
                    "namespace": "default",
                    "resourceVersion": "59349",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationwebsockettest-admin",
                    "uid": "ce292b92-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.107.138.235",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "authenticationwebsockettest-admin",
                            "nodePort": 30770,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "authenticationwebsockettest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"authenticationwebsockettest\",\"scope\":\"AmbassadorTest\"},\"name\":\"authenticationwebsockettest-http-auth\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8094},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8457}],\" [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:03Z",
                    "labels": {
                        "kat-ambassador-id": "authenticationwebsockettest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "authenticationwebsockettest-http-auth",
                    "namespace": "default",
                    "resourceVersion": "59359",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationwebsockettest-http-auth",
                    "uid": "ce5c8d14-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.111.248.148",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8094
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8457
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
